tests/snapshots/execution_spec__request-to-upstream-batching.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(batchRequests: true) @upstream(batch: {delay: 1, maxSize: 100}) {
  query: Query
}

type Query {
  user(id: Int!): User @http(baseURL: "http://jsonplaceholder.typicode.com", batchKey: ["id"], path: "/users", query: [{key: "id", value: "{{args.id}}"}])
}

type User {
  id: Int
  name: String
}
