tests/snapshots/execution_spec__request-to-upstream-batching.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": [
    {
      "data": {
        "user": {
          "id": 1,
          "name": "foo"
        }
      }
    },
    {
      "data": {
        "user": {
          "id": 2,
          "name": "bar"
        }
      }
    }
  ]
}
