tests/snapshots/execution_spec__resolve-with-headers.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "IOException: No mock found for request: GET http://jsonplaceholder.typicode.com/posts/ in tests/execution/resolve-with-headers.md",
        "locations": [
          {
            "line": 1,
            "column": 9
          }
        ]
      }
    ]
  }
}
