tests/snapshots/execution_spec__resolve-with-headers.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Post {
  body: String!
  id: ID!
  title: String!
  userId: ID!
}

type Query {
  post1: Post
}

scalar Url

schema {
  query: Query
}
