tests/snapshots/execution_spec__resolved-by-parent.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Query {
  user: User
}

type User {
  address: String
}

schema {
  query: Query
}
